components/platform/gateway/base/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-edge-gateway-cnp
  namespace: zylos-infra-gateway
spec:
  endpointSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: zylos-edge-gateway
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": istio-system
      toPorts:
        - ports:
            - port: "15010"
              protocol: TCP
            - port: "15012"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": zylos-identity
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "443"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace.labels.zylos.app/namespace-tier": tenant
